some refactoring and fail safes