@@ -1,7 +1,6 @@
 package com.rae.crowns.content.thermodynamics.turbine;
 
 
-import com.rae.crowns.CROWNSLang;
 import com.rae.crowns.content.thermodynamics.StateFluidTank;
 import com.rae.crowns.init.misc.BlockEntityInit;
 import com.rae.formicapi.thermal_utilities.SpecificRealGazState;
@@ -33,80 +32,70 @@ import java.util.List;
 @MethodsReturnNonnullByDefault
 public class SteamInputBlockEntity extends SmartBlockEntity implements IHaveGoggleInformation {
 
-	private final StateFluidTank WATER_TANK = new StateFluidTank(1000, (f)-> {
-		if (!hasLevel()){
-			return;
-		}
+    private static final int SYNC_RATE = 8;
+    public SteamCurrent steamCurrent;
+    protected int currentUpdateCooldown;
+    protected boolean updateSteamFlow;
+    protected int syncCooldown;
+    protected boolean queuedSync;
+    float flow;
+    private final StateFluidTank WATER_TANK = new StateFluidTank(1000, (f) -> {
+        if (!hasLevel()) {
+            return;
+        }
         assert level != null;
         if (!level.isClientSide) {
-			flow = f.getAmount()+1;
-			sendData();
-		}
-	}){
-		@Override
-		public boolean isFluidValid(FluidStack stack) {
-			return stack.getFluid().is(FluidTags.WATER);
-		}
-	};
-	public SteamCurrent steamCurrent;
-	protected int currentUpdateCooldown;
-	protected boolean updateSteamFlow;
-	float flow;
+            flow = f.getAmount() + 1;
+            sendData();
+        }
+    }) {
+        @Override
+        public boolean isFluidValid(FluidStack stack) {
+            return stack.getFluid().is(FluidTags.WATER);
+        }
+    };
 
-	public SteamInputBlockEntity(BlockEntityType<?> type, BlockPos pos, BlockState state) {
-		super(type, pos, state);
-		steamCurrent = null;
-		updateSteamFlow = true;
-	}
+    public SteamInputBlockEntity(BlockEntityType<?> type, BlockPos pos, BlockState state) {
+        super(type, pos, state);
+        steamCurrent = null;
+        updateSteamFlow = true;
+    }
 
-	@Override
-	public void addBehaviours(List<BlockEntityBehaviour> behaviours) {
+    public static void registerCapabilities(RegisterCapabilitiesEvent event) {
+        event.registerBlockEntity(
+                Capabilities.FluidHandler.BLOCK,
+                BlockEntityInit.STEAM_INPUT.get(),
+                (be, context) -> {
+                    Direction localDir = be.getBlockState().getValue(DirectionalBlock.FACING);
+                    if (context == localDir.getOpposite()) {
+                        return be.WATER_TANK;
+                    }
+                    return null;
+                }
+        );
+    }
 
-	}
+    @Override
+    public void addBehaviours(List<BlockEntityBehaviour> behaviours) {
 
+    }
 
-	@Override
-	protected void read(CompoundTag compound, HolderLookup.Provider registries, boolean clientPacket) {
-		WATER_TANK.readFromNBT(registries,(CompoundTag) compound.get("water_tank"));
-		flow = compound.getFloat("flow");
-		super.read(compound, registries,clientPacket);
-	}
-
-	@Override
-	public void write(CompoundTag compound, HolderLookup.Provider registries,  boolean clientPacket) {
-		super.write(compound, registries,clientPacket);
-		compound.put("water_tank",WATER_TANK.writeToNBT(registries,new CompoundTag()));
-		compound.putFloat("flow", flow);
-	}
-	private static final int SYNC_RATE = 8;
-	protected int syncCooldown;
-	protected boolean queuedSync;
-	@Override
-	public void sendData() {
-		if (syncCooldown > 0) {
-			queuedSync = true;
-			return;
-		}
-		super.sendData();
-		queuedSync = false;
-		syncCooldown = SYNC_RATE;
-	}
-	@Override
-	public void tick() {
-		super.tick();
-		assert level != null;
-		if (!level.isClientSide) {
-			if (currentUpdateCooldown-- <= 0) {
-				currentUpdateCooldown = AllConfigs.server().kinetics.fanBlockCheckRate.get();
-				updateSteamFlow = true;
-			}
-			if (syncCooldown > 0) {
-				syncCooldown--;
-				if (syncCooldown == 0 && queuedSync)
-					sendData();
-			}
-			if (updateSteamFlow) {
-				updateSteamFlow = false;
+    @Override
+    public void tick() {
+        super.tick();
+        assert level != null;
+        if (!level.isClientSide) {
+            if (currentUpdateCooldown-- <= 0) {
+                currentUpdateCooldown = AllConfigs.server().kinetics.fanBlockCheckRate.get();
+                updateSteamFlow = true;
+            }
+            if (syncCooldown > 0) {
+                syncCooldown--;
+                if (syncCooldown == 0 && queuedSync)
+                    sendData();
+            }
+            if (updateSteamFlow) {
+                updateSteamFlow = false;
 
                 Direction facing = getBlockState().getValue(SteamInputBlock.FACING);
                 List<SteamCurrent> currents = SteamFlowManager.getCurrentsInBounds((ServerLevel) level, new AABB(worldPosition.relative(facing)));
@@ -116,7 +105,7 @@ public class SteamInputBlockEntity extends SmartBlockEntity implements IHaveGogg
                     steamCurrent.rebuild(level);
                     SteamFlowManager.addSteamCurrent((ServerLevel) level, steamCurrent);
                 } else {
-                    steamCurrent = currents.get(0);
+                    steamCurrent = currents.getFirst();
                     steamCurrent.setDirection(facing);
                     steamCurrent.setInputFluidState(WATER_TANK.getState());
                     steamCurrent.rebuild(level);
@@ -130,38 +119,47 @@ public class SteamInputBlockEntity extends SmartBlockEntity implements IHaveGogg
         }
     }
 
-	public SpecificRealGazState getState(){
-		return WATER_TANK.getState();
-	}
+    @Override
+    public void write(CompoundTag compound, HolderLookup.Provider registries, boolean clientPacket) {
+        super.write(compound, registries, clientPacket);
+        compound.put("water_tank", WATER_TANK.writeToNBT(registries, new CompoundTag()));
+        compound.putFloat("flow", flow);
+    }
 
+    @Override
+    protected void read(CompoundTag compound, HolderLookup.Provider registries, boolean clientPacket) {
+        CompoundTag fluidTag = (CompoundTag) compound.get("water_tank");
+        WATER_TANK.readFromNBT(registries, fluidTag != null ? fluidTag : new CompoundTag());
+        flow = compound.getFloat("flow");
+        super.read(compound, registries, clientPacket);
+    }
 
+    @Override
+    public void sendData() {
+        if (syncCooldown > 0) {
+            queuedSync = true;
+            return;
+        }
+        super.sendData();
+        queuedSync = false;
+        syncCooldown = SYNC_RATE;
+    }
 
-	public static void registerCapabilities(RegisterCapabilitiesEvent event) {
-		event.registerBlockEntity(
-				Capabilities.FluidHandler.BLOCK,
-				BlockEntityInit.STEAM_INPUT.get(),
-				(be, context) -> {
-					Direction localDir = be.getBlockState().getValue(DirectionalBlock.FACING);
-					if (context ==  localDir.getOpposite()){
-						return be.WATER_TANK;
-					}
-					return null;
-				}
-		);
-	}
-	@Override
-	public boolean addToGoggleTooltip(@NotNull List<Component> tooltip, boolean isPlayerSneaking) {
-		SpecificRealGazState newState = getState();
-		CROWNSLang.specificRealFluidState(newState)
-				.forGoggles(tooltip, 1);
-		CreateLang.builder().add(
-				Component.literal(" Flow = " + flow + "/ 1000")
-		).forGoggles(tooltip, 1);
+    public SpecificRealGazState getState() {
+        return WATER_TANK.getState();
+    }
 
-		return true;
-	}
+    @Override
+    public boolean addToGoggleTooltip(@NotNull List<Component> tooltip, boolean isPlayerSneaking) {
+        containedFluidTooltip(tooltip, isPlayerSneaking, WATER_TANK);
+        CreateLang.builder().add(
+                Component.literal(" Flow = " + flow + "/ 1000")
+        ).forGoggles(tooltip, 1);
 
-	public float getFlow() {
-		return flow;
-	}
+        return true;
+    }
+
+    public float getFlow() {
+        return flow;
+    }
 }
